# WebAuthZKP

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  app.js  build-wasm.sh  check.py  database.js  functions.js  package-lock.json  package.json  webauthn.db
RustCode/: Cargo.toml
RustCode/src/: main.rs  webauth_circuit.rs
Website/: app.js  functions.js  package-lock.json  package.json  webauthn.db
Website/node_wasm/: package.json  webauth_zkp.d.ts  webauth_zkp.js  webauth_zkp_bg.wasm  webauth_zkp_bg.wasm.d.ts
Website/public/: client.js  index.html  styles.css
Website/public/web_wasm/: package.json  webauth_zkp.d.ts  webauth_zkp.js  webauth_zkp_bg.wasm
public/: client.js  index.html  script.js
src/: main.rs  webauth_circuit.rs
