[package]
name = "webauth-zkp"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-r1cs-std = "0.4"
ark-crypto-primitives = { version = "0.4.0", features = ["crh", "r1cs"] }
ark-bls12-377 = "0.4.0"
ark-ff = "0.4.2"
ark-relations = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
rand = "0.8.4"
ark-serialize = "0.4"
base64 = "0.21.7"
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
serde = "1.0.196"
serde_json = "1.0.113"
serde-wasm-bindgen = "0.6.3"
sha2 = "0.10.8"

[dependencies.getrandom]
version = "0.2.12"  # Use the actual version you need
features = ["js"]

[dependencies.web-sys]
version = "0.3.68"
features = [ "console" ]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/webauth_circuit.rs"

[profile.release]
lto = true
opt-level = 3